clean up mobile nav layout - no longer overlapping content

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -26,6 +26,9 @@
     &:hover {
         text-decoration: none;
     }
+    @include media-query($on-palm) {
+      float: none;
+    }
 }
 
 .site-nav {
@@ -57,13 +60,12 @@
     }
 
     @include media-query($on-palm) {
-        position: absolute;
-        top: 9px;
-        right: $spacing-unit / 2;
+        position: relative;
+        float: none;
         background-color: $background-color;
-        border: 1px solid $grey-color-light;
-        border-radius: 5px;
-        text-align: right;
+        text-align: left;
+        line-height: 40px;
+        margin-bottom: 5px;
 
         .menu-icon {
             display: block;
@@ -95,13 +97,14 @@
         }
 
         .page-link {
-            display: block;
-            padding: 5px 10px;
+            width: auto;
+            display: inline;
+            padding: 2px 5px;
 
             &:not(:last-child) {
                 margin-right: 0;
             }
-            margin-left: 20px;
+            margin-left: 5px;
         }
     }
 }
